test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/initialize_incomplete.plx
type struc s;

#  you can declare extern variables of incomplete type
#  but it's illegal to initialize them
extrn x: struc s = $(1)

pub fn main(none) i32 {
    return false
}

type struc s(
    a: i32    )
